--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/fact_tv"
+        android:id="@+id/movieItem_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="TextView"
