--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/factsFragment"
-        android:name="com.example.app2.FactsFragment"
+        android:name="com.example.app2.MoviesFragment"
         android:label="fragment_facts"
-        tools:layout="@layout/fragment_facts" />
+        tools:layout="@layout/fragment_movies" />
     <fragment
         android:id="@+id/catFragment"
         android:name="com.example.app2.CatFragment"
