--- a/app/src/main/res/menu/bar_menu.xml
+++ b/app/src/main/res/menu/bar_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/factsFragment"
+        android:id="@+id/moviesFragment"
         android:icon="@android:drawable/btn_star_big_on"
-        android:title="Facts" />
+        android:title="Movies" />
     <item
         android:id="@+id/catFragment"
         android:icon="@drawable/ic_baseline_question_mark_24"
